--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -5,6 +5,7 @@
 #header .logo {
     width: 400px;
     height: 120.75px;
+    margin-left: 45px;
     // @media (max-width: 480px) {
     //     max-width: 240px;
     //     max-height: 72.453px;
@@ -30,11 +31,12 @@
     #header {
         .header-nav {
             max-height: 100%;
+            margin-top: 80px;
             border: none;
             .row {
                 display: flex;
                 flex-wrap: nowrap;
-                border-bottom: 1px solid #000;
+                border-bottom: 1px solid $grey_border;
                 position: relative;
 
                 .right-nav {
@@ -86,6 +88,11 @@
                     position: absolute;
                     bottom: 0;
                     text-align: center;
+                    left: 90px;
+
+                    // @media screen (max-width: 1200px) {
+
+                    // }
 
                     .menu {
                         > ul {
@@ -97,7 +104,7 @@
                                     font-family: $unna;
                                     font-size: 20px;
                                     text-transform: none;
-
+                                    letter-spacing: 0px;
                                 }
                             }
                         }
