--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -5037,7 +5037,7 @@ tbody.collapse.in {
 
 .breadcrumb {
     padding: .75rem 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 50px;
     list-style: none;
     background-color: #f6f6f6;
     border-radius: 0
