"hover category product image"

--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -81,3 +81,11 @@
 .collapse-icons[aria-expanded=true] .add {
     display: none;
 }
+
+.product-miniature {
+    .thumbnail-container {
+        .carousel-inner {
+            display: none;
+        }
+    }
+}
