mega menu fix bug

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -46,3 +46,11 @@ $unna: 'Unna';
         }
     }
 }
+
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
