--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -22,7 +22,10 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
     height: auto;
     .menu-block {
         .menulink.current {
-            color: red !important;
+           text-decoration: underline;
+        }
+        .menulink {
+            cursor: pointer;
         }
         margin: 30px 20px;
         flex: 1 1 auto;
