"megamenu js mobile"

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -297,3 +297,10 @@
         }
     }
 }
+
+@media (min-width: 1200px) {
+    #wrapper .container {
+        width: 1190px;
+        max-width: 100%;
+    }
+}
