--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -46,7 +46,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
         i {
             display: block;
         }
-        &:first-child {
+        &:nth-child(2) {
             flex: 0 1 auto;
         }
         .recipe-ingredient {
@@ -77,7 +77,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                 }
             }
         }
-        &:nth-child(2) {
+        &:nth-child(3) {
             border-right: 1px solid $black;
             border-left: 1px solid $black;
             padding: 0 30px;
@@ -172,4 +172,16 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
 
 span.obflink {
     cursor: pointer;
+}
+
+@media (max-width: 480px) {
+    #header.is-open {
+        .header-top {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: 999;
+            height: 1900px;
+        }
+    }
 }
