--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -8,11 +8,8 @@
             height: 100%;
         }
         #search_filters {
-            @media (max-width: 767px) {
-                padding: 10px 0!important;
-            }
             #filtre-name {
-                text-align: center;
+                padding-left: 30px;
                 font-size: 1.2em;
                 p {
                     position: relative;
@@ -61,7 +58,6 @@
                 border: 1px solid #000;
                 padding: .5rem 1.25rem;
                 padding-left: 30px;
-
                 i {
                     position: absolute;
                     left: 8px;
@@ -72,6 +68,34 @@
     }
     .categories {
         float: right;
+    }
+}
+
+@media (max-width: 480px) {
+    #facet_section.collapse.in {
+        position: fixed;
+        top: 0;
+        z-index: 999;
+        width: 90%;
+        background: white;
+        left: 0;
+        padding: 20px;
+        height: 100%;
+        -webkit-animation: linear;
+        -webkit-animation-name: run;
+        -webkit-animation-duration: 0.5s;
+    }
+}
+
+@-webkit-keyframes run {
+    0% {
+        left: -100px;
+    }
+    50% {
+        left: -50px;
+    }
+    100% {
+        left: 0;
     }
 }
 
