--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -28,12 +28,15 @@
                     text-transform: uppercase;
                     letter-spacing: .1rem;
                     font-size: 13px;
+                    font-weight: 600;
                     @media (max-width: 1200px) {
                         font-size: 11px;
                     }
                 }
             }
             .button-filtre {
+                margin-top: 30px;
+                margin-left: 16px;
                 #category-filtre {
                     color: $black;
                     background-color: $white;
