--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -36,7 +36,9 @@
             }
             .button-filtre {
                 margin-top: 30px;
-                margin-left: 16px;
+                @media (max-width: 767px) {
+                    margin-left: 16px;
+                }
                 #category-filtre {
                     color: $black;
                     background-color: $white;
