--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -164,3 +164,12 @@
         // }
     }
 }
+
+ul#facet_41888 {
+    .form-check-filtre:nth-child(5) {
+        margin-bottom: 1.5rem;
+    }
+    .form-check-filtre:nth-child(8) {
+        margin-bottom: 1.5rem;
+    }
+}
