mega menu mobile

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -6,6 +6,7 @@ $grey_border: #d8d8d8;
 $greyblack: #232323;
 $greylight: #464646;
 $blue: #82b8ec;
+$pink: #FEF9F4;
 
 $alegreya : 'AlegreyaSans';
 $roboto: 'RobotoMono'; 
