--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -11,15 +11,30 @@ ul.top-menu[data-child="1"] li.menu-item:hover .sub-menu {
 }
 
 ul.top-menu[data-child="1"] li.menu-item .sub-menu {
-    background-color: #FEF9F4;
+    background-color: $pink;
     display: flex;
     width: 100%;
+
+    @media (max-width: 769px) {
+        position: relative;
+        background-color: $pink;
+    }
+
 }
 
 .top-menu .sub-menu.collapse {
     justify-content: space-between;
     padding: 0 30px;
     height: auto;
+    
+    @media (max-width: 769px) {
+        position: relative;
+        z-index:999;
+        padding: 0;
+        margin-top: 10px;   
+    }
+
+
     .menu-block {
         .menulink.current {
            text-decoration: underline;
@@ -29,6 +44,15 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
         }
         margin: 30px 20px;
         flex: 1 1 auto;
+
+        @media (max-width: 769px) {
+            display: block;
+            background-color: $pink;
+            padding: 0 30px;
+            margin: 0;
+
+        }
+
         .menu-block-link {
             i {
                 a {
@@ -41,12 +65,15 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             }
         }
         .menu-block-name {
+            font-family: $roboto;
             padding-bottom: 5px;
             font-size: 11px;
             text-transform: uppercase;
             word-spacing: 4px;
             letter-spacing: 1px;
             color: $black;
+
+            
         }
         i {
             display: block;
@@ -59,9 +86,14 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             padding-top: 20px;
             border-top: 1px solid $black;
 
+            @media (max-width: 769px) {
+                margin: 0;
+                padding: 0;
+    
+            }
+
         }
         &:first-child {
-                
             i {
                 a {
                     font-style: normal;
@@ -87,11 +119,26 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             border-left: 1px solid $black;
             padding: 0 30px;
 
+            @media (max-width: 769px) {
+                border: none;
+            }
+
             .recipe-ingredient {
                 display: flex;
                 justify-content: space-between;
 
+                @media (max-width: 769px) {
+                    display: block;
+                }
+
                 .menu-block-child {
+
+                    @media (max-width: 769px) {
+                        margin-top: 20px;
+                        
+            
+                    }
+
                     .menu-block-child-name {
                         font-family: $unna;
                         font-size: 20px;
@@ -99,6 +146,8 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                         color: $black;
                         line-height: 22px;
                     }
+
+
                     .menu-block-link {
                         i {
                             a {
@@ -112,6 +161,11 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                     }
                     .menu-block-child-link {
                         margin-top: 20px;
+
+                        @media (max-width: 769px) {
+                            margin: 0;
+                
+                        }
                         span {
                             font-style: normal;
                             font-family: $alegreya;
@@ -158,9 +212,20 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                         border-right: 1px solid $grey;
                         padding-left: 30px;
                         padding-right: 10px;
+
+                        @media (max-width: 769px) {
+                            border: none;
+                            padding-right: 0;
+                            padding-left: 0;
+                        }
                     }
                     &:last-child {
                         padding-left: 30px;
+
+                        @media (max-width: 769px) {
+                            padding: 0;
+                
+                        }
                     }
                 }
             }
@@ -176,7 +241,11 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
 
 .popover {
     top: 43px;
-    left: -100px;
+    margin: 0;
+
+    @media (max-width: 769px) {
+        z-index: 99;
+    }
 }
 
 span.obflink {
