--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -16,6 +16,10 @@
                     .filtre-sr {
                         position: relative;
                         top: -5px;
+                        font-family: 'RobotoMono';
+                        color: #000;
+                        font-size: 16px;
+                        text-decoration: underline;
                     }
                 }
             }
@@ -89,6 +93,19 @@
         -webkit-animation: linear;
         -webkit-animation-name: run;
         -webkit-animation-duration: 0.5s;
+    }
+    #filtre-name[aria-expanded=true] {
+        #overlay {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.3);
+            z-index: 998;
+        }
     }
 }
 
