fiche produit version mobile

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -192,6 +192,10 @@
                 .block-icon {
                     margin: 0 auto;
                 }
+
+                @media (max-width: 768px) {
+                    width: 100%;
+                }    
             }
         }
         p {
