--- a/assets/scss/trustpilot.css
+++ b/assets/scss/trustpilot.css
@@ -225,7 +225,7 @@
     color: #e17550;
     font-size: 2em;
     font-weight: 400;
-    text-align: center;
+    margin: 0 auto;
     padding-top: 2em;
 }
 
