--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -264,8 +264,8 @@
         }
         img {
             border: 1px solid #dbdbdb;
-            width: 347px;
-            height: 347px;
+            max-width: 296px;
+            max-height: 296px;
         }
     }
 }
