--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -3,9 +3,9 @@
     position: relative;
     .footer-container {
         .container {
-            width: 1600px;
             margin: 0 auto;
             .row {
+                width: 100%;
                 .logo {
                     width: 150px;
 
