--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -253,6 +253,9 @@
         grid-gap: 10px;
         display: grid;
         text-align: center;
+        @media (max-width: 767px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
         @media (max-width: 480px) {
             grid-template-columns: repeat(1, 1fr);
         }
